--- a/bin/win/manifest.json
+++ b/bin/win/manifest.json
@@ -5,8 +5,8 @@
     "plugins":[ {"path": "npSockIt.dll", "public": true} ],
     "permissions": ["http://<all_urls>, https://<all_urls>, file://<all_urls>"],
     "browser_action": {
-        "default_title": "",
-        "default_icon": "",
-        "default_popup": ""
+        "default_title": "Sockit",
+        "default_icon": "chrome/icon.png",
+        "default_popup": "chrome/sockit.html"
     }
 }
